<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/secondary_background"
    tools:context=".MainActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sCourse"
                style="@style/ButtonTheme"
                android:id="@+id/shipsCourse" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sSpeed"
                style="@style/ButtonTheme"
                android:id="@+id/shipsSpeed" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rwCourse"
                style="@style/ButtonTheme"
                android:id="@+id/windDirection" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rwSpeed"
                style="@style/ButtonTheme"
                android:id="@+id/windSpeed" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/result" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/result2" />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/rumbs"
        android:id="@+id/calculation"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/shipsCourseVector"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/windDirectionVector"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/windDirectionArrow"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/resultVector"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/resultArrow"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF00ff00"
            android:text="@string/ownShip"
            android:id="@+id/ownShipLabel"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF0000ff"
            android:text="@string/rWind"
            android:id="@+id/rWindLabel"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFff0000"
            android:text="@string/tWind"
            android:id="@+id/tWindLabel"/>

    </LinearLayout>
</RelativeLayout>


</LinearLayout>
